Fixed align issue on sports page + added auto reload on cache update ready

--- a/src/sass/general.sass
+++ b/src/sass/general.sass
@@ -12,7 +12,7 @@ $warning-background: #dba12f
 // Backgrounds
 $background-base: linear-gradient(to bottom, white, #ddd)
 $background-base-2: #d9d9d9
-$background-theme: #73acea
+$background-theme: #6b99d6
 $light-background-theme: rgba(115, 172, 234, 0.25)
 $button-theme: $background-theme
 
